@@ -122,8 +122,12 @@ class Sections_controller extends Common_api_functions {
 		}
 		// verify ID
 		elseif(isset($this->_params->id)) {
+			# changelog
+			if($this->_params->id2=="changelog") 		{
+				return array("code"=>200, "data"=>$this->section_changelog ());
+			}
 			# fetch by id
-			if(is_numeric($this->_params->id)) {
+			elseif(is_numeric($this->_params->id)) {
 				$result = $this->Sections->fetch_section ("id", $this->_params->id);
 				// check result
 				if($result===false) 					{ $this->Response->throw_exception(404, "Section does not exist"); }
@@ -265,4 +269,37 @@ class Sections_controller extends Common_api_functions {
         # return
         return $subnet_usage;
 	 }
+
+	/**
+	 * Get changelog for subnet
+	 * @method subnet_changelog
+	 * @return [type]
+	 */
+	private function section_changelog () {
+		// get changelog
+		$Log = new Logging ($this->Database);
+		$clogs = $Log->fetch_changlog_entries("section", $this->_params->id, true);
+		// reformat
+		$clogs_formatted = [];
+		// loop
+		if (is_array($clogs)) {
+			if (sizeof($clogs)>0) {
+				foreach ($clogs as $l) {
+					// diff to array
+					$l->cdiff = explode("\r\n", str_replace(["[","]"], "", trim($l->cdiff)));
+					// save
+					$clogs_formatted[] = [
+						"user"   => $l->real_name,
+						"action" => $l->caction,
+						"result" => $l->cresult,
+						"date"   => $l->cdate,
+						"diff"   => $l->cdiff,
+					];
+				}
+			}
+		}
+		// result
+		if(sizeof($clogs_formatted)>0) 	{ return $clogs_formatted; }
+		else 							{ $this->Response->throw_exception(404, "No changelogs found"); }
+	}
 }
